--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="cf-2fa-verify" content="f39c261a9717221">
 	<!-- Use title if it's in the page YAML frontmatter -->
 	<title>Magnus Ottosson - A Senior Software Developer & Creative</title>
 
